<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="12dp"
        android:text="@string/please_press_the_boxes_next_to_7_categories_that_interest_you"
        app:layout_constraintBottom_toTopOf="@+id/Art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <CheckBox
        android:id="@+id/Art"
        android:layout_width="107dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="15dp"
        android:text="@string/art"
        app:layout_constraintBottom_toTopOf="@+id/Business"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <CheckBox
        android:id="@+id/Business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="9dp"
        android:text="@string/business"
        app:layout_constraintBottom_toTopOf="@+id/Theater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Art" />

    <CheckBox
        android:id="@+id/Culinary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="15dp"
        android:text="@string/culinary"
        app:layout_constraintBottom_toTopOf="@+id/Horror"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Theater" />

    <CheckBox
        android:id="@+id/Horror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="59dp"
        android:text="@string/horror"
        app:layout_constraintBottom_toTopOf="@+id/Mystery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Culinary" />

    <CheckBox
        android:id="@+id/Music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Mystery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="13dp"
        android:text="@string/mystery"
        app:layout_constraintBottom_toTopOf="@+id/Science"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Horror" />

    <CheckBox
        android:id="@+id/Science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="13dp"
        android:text="@string/science"
        app:layout_constraintBottom_toTopOf="@+id/Sports"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mystery" />

    <CheckBox
        android:id="@+id/Sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/sports"
        app:layout_constraintBottom_toTopOf="@+id/Travel"
        app:layout_constraintStart_toStartOf="@+id/Science"
        app:layout_constraintTop_toBottomOf="@+id/Science" />

    <CheckBox
        android:id="@+id/Travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="58dp"
        android:text="@string/travel"
        app:layout_constraintBottom_toTopOf="@+id/Animals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sports" />

    <CheckBox
        android:id="@+id/Activism"
        android:layout_width="207dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="124dp"
        android:text="@string/activism_or_civil_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/Animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/animals"
        app:layout_constraintBottom_toTopOf="@+id/Done"
        app:layout_constraintStart_toStartOf="@+id/Activism"
        app:layout_constraintTop_toBottomOf="@+id/Travel" />

    <CheckBox
        android:id="@+id/Literature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:text="@string/literature"
        app:layout_constraintEnd_toStartOf="@+id/Done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Animals" />

    <Button
        android:id="@+id/Done"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="30dp"
        android:onClick="onProfileClick"
        android:text="Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Literature"
        app:layout_constraintTop_toBottomOf="@+id/Animals" />

    <CheckBox
        android:id="@+id/Theater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/theater"
        app:layout_constraintBottom_toTopOf="@+id/Culinary"
        app:layout_constraintStart_toStartOf="@+id/Business"
        app:layout_constraintTop_toBottomOf="@+id/Business" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/create_your_profile"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>