<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationSelection">

    <TextView
        android:id="@+id/number"
        android:layout_width="309dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="187dp"
        android:text="@string/location_selection"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/VistaRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_1753" />

    <Button
        android:id="@+id/VistaRoom"
        android:layout_width="60dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="60dp"
        android:onClick="onLocationClick"
        android:text="@string/vista_room"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/LoungeRoom"
        app:layout_constraintEnd_toStartOf="@+id/Classroom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/Classroom"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:text="@string/classroom"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VistaRoom" />

    <Button
        android:id="@+id/LoungeRoom"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="287dp"
        android:text="@string/lounge_room"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/VistaRoom" />

</androidx.constraintlayout.widget.ConstraintLayout>